--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.0.2",
     "@mui/x-charts": "^8.0.0",
+    "chart.js": "^4.4.9",
     "firebase": "^11.6.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-gauge-component": "^1.2.64",
     "react-icons": "^5.5.0",
     "react-swipeable": "^7.0.2"
   },
