--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^7.0.2",
     "@mui/x-charts": "^8.0.0",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
