--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
+    "gsap": "^3.12.7",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
