--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-gauge-component": "^1.2.64",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.5.2",
     "react-swipeable": "^7.0.2",
     "uuid": "^11.1.0"
   },
