--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "gsap": "^3.12.7",
+    "i18next": "^25.0.2",
+    "i18next-browser-languagedetector": "^8.0.5",
+    "i18next-http-backend": "^3.0.2",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-gauge-component": "^1.2.64",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
     "react-swipeable": "^7.0.2",
