--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/material": "^7.0.2",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
-    "firebase": "^11.6.0",
+    "firebase": "^11.6.1",
+    "firebase-admin": "^13.3.0",
+    "firebase-functions": "^6.3.2",
     "gsap": "^3.12.7",
     "i18next": "^25.0.2",
     "i18next-browser-languagedetector": "^8.0.5",
