--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.6.1",
     "firebase-admin": "^13.3.0",
     "firebase-functions": "^6.3.2",
+    "firebase-tools": "^14.2.1",
     "gsap": "^3.12.7",
     "i18next": "^25.0.2",
     "i18next-browser-languagedetector": "^8.0.5",
