--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
     "react-swipeable": "^7.0.2",
+    "resend": "^4.5.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
